View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033072 | Open CASCADE | OCCT:Configuration | public | 2022-07-21 23:28 | 2022-10-19 15:55 |
Reporter | kgv | Assigned To | vpozdyayev | ||
Priority | normal | Severity | trivial | ||
Status | verified | Resolution | fixed | ||
Product Version | 7.7.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0033072: Configuration - ViewerTest_EventManager.cxx compilation error due to missing header on Emscripten | ||||
Description | The following compilation error (after 0033041) should be fixed:C:\occt.git\src\ViewerTest\ViewerTest_EventManager.cxx:839:5: error: use of undeclared identifier 'Message' Message::SendFail ("Error: unable registering callbacks to Module.canvas"); | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | N/A | ||||
|
Branch CR33072 has been created by kgv. SHA-1: b2156445da139bc91acdbf86734787f728058454 Detailed log of new commits: Author: kgv Date: Thu Jul 21 23:30:00 2022 +0300 0033072: Configuration - ViewerTest_EventManager.cxx compilation error due to missing header on Emscripten Added missing `#include <Message.hxx>`. |
|
Please raise the fix - OCCT: branch CR33072. |
|
Combination - OCCT branch : IR-2022-07-22 master SHA - changes and them, and you can discard any commits you make in this cb8519be19a3533b741f016d703119320de72ea6 changes and them, and you can discard any commits you make in this e0ceb716c70188b98130b1550914140d0502a6f9 Products branch : IR-2022-07-22 SHA - 7d10377b57d1c1ddf69852bf5b4e764f581c282f was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18704.32000000071 / 18688.950000000597 [+0.08%] Products Total CPU difference: 11922.590000000118 / 11921.05000000012 [+0.01%] Windows-64-VC14: OCCT Total CPU difference: 20723.546875 / 20746.84375 [-0.11%] Products Total CPU difference: 13486.40625 / 13479.375 [+0.05%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33072 has been deleted by mnt. SHA-1: b2156445da139bc91acdbf86734787f728058454 |
occt: master 18559e93 2022-07-21 23:30:00 Committer: smoskvin Details Diff |
0033072: Configuration - ViewerTest_EventManager.cxx compilation error due to missing header on Emscripten Added missing `#include <Message.hxx>`. |
Affected Issues 0033072 |
|
mod - src/ViewerTest/ViewerTest_EventManager.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-07-21 23:28 | kgv | New Issue | |
2022-07-21 23:28 | kgv | Assigned To | => bugmaster |
2022-07-21 23:30 | git | Note Added: 0109930 | |
2022-07-21 23:31 | kgv | Relationship added | child of 0033041 |
2022-07-21 23:31 | kgv | Description Updated | |
2022-07-21 23:31 | kgv | Test case number | => N/A |
2022-07-21 23:32 | kgv | Severity | minor => trivial |
2022-07-21 23:32 | kgv | Note Added: 0109931 | |
2022-07-21 23:32 | kgv | Status | new => resolved |
2022-07-21 23:32 | kgv | Status | resolved => reviewed |
2022-07-23 14:11 | smoskvin | Status | reviewed => tested |
2022-07-23 14:11 | smoskvin | Note Added: 0109959 | |
2022-07-23 15:29 | smoskvin | Changeset attached | => occt master 18559e93 |
2022-07-23 15:29 | kgv | Assigned To | bugmaster => kgv |
2022-07-23 15:29 | kgv | Status | tested => verified |
2022-07-23 15:29 | kgv | Resolution | open => fixed |
2022-07-23 15:38 | git | Note Added: 0109967 | |
2022-10-19 15:55 | smoskvin | Assigned To | kgv => vpozdyayev |