0033072: Configuration - ViewerTest_EventManager.cxx compilation error due to missing header on Emscripten

Added missing `#include <Message.hxx>`.